--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://mern-ecom-store-qonv.onrender.com/"
+  "proxy": "https://mern-ecom-store-qonv.onrender.com/",
+    "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  }
 }
+
